--- a/week5.html
+++ b/week5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="color-scheme" content="dark">
-  <title>Week 5 – Beds</title>
+  <title>Week 4 – Stacked Bars</title>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
   <style>
@@ -11,7 +11,7 @@
     html, body { height:100%; margin:0; background:var(--bg); font-family:'DM Sans', system-ui, -apple-system, Segoe UI, Arial, sans-serif; }
     .wrap { min-height:100%; display:flex; align-items:center; justify-content:center; padding:16px; }
     .box  { width:100%; max-width:650px; }
-    #chart { width:100%; height:340px; }   /* same size as the other weeks */
+    #chart { width:100%; height:340px; }
   </style>
 </head>
 <body>
@@ -22,132 +22,131 @@
   </div>
 
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      // ---------- Week 5 (Beds) ----------
-      // Fixed legend/series order: North, South, West, East, Center, Anywhere in Riyadh
-      const rows = [
-        // city      N    S   W    E   C   Any
-        ['Riyadh',  834,  3, 150,  1,  6,   0]
-      ];
+    // ------------ Week 4 (Sep 8 – Sep 16, 2025) ------------
+    // Fixed category order: North, South, West, East, Center, Anywhere in Riyadh
+    const rows = [
+      // city      N   S   W   E   C   Any
+      ['Riyadh',  834,  3,  150,  1,  6,   0],
+    ];
 
-      const categories = ['North','South','West','East','Center','Anywhere in Riyadh'];
-      const colors = {
-        'North':              '#78C889', // (same as previous weeks)
-        'South':              '#6FA8FF',
-        'West':               '#F07A7A',
-        'East':               '#E6C45A',
-        'Center':             '#4EC7CC',
-        'Anywhere': '#9B51E0'
-      };
+    const cities = rows.map(r => r[0]);
+    const totals = rows.map(r => r.slice(1).reduce((a,b)=>a+b,0));
 
-      const cities = rows.map(r => r[0]);
-      const totals = rows.map(r => r.slice(1).reduce((a,b)=>a+b,0)); // -> [994]
+    const categories = ['North','South','West','East','Center','Anywhere'];
+    const colorMap = {
+      'North':              '#78C889',
+      'South':              '#6FA8FF',
+      'West':               '#F07A7A',
+      'East':               '#E6C45A',
+      'Center':             '#4EC7CC',
+      'Anywhere': '#9B51E0'
+    };
 
-      // Identify top non-zero segment per city so only that cap is rounded (same behavior)
-      const topIndexByCity = rows.map(r => {
-        const vals = r.slice(1);
-        for (let i = vals.length - 1; i >= 0; i--) if (vals[i] > 0) return i;
-        return -1;
-      });
-
-      const baseBar = {
-        type: 'bar',
-        stack: 'total',
-        barWidth: 22,
-        itemStyle: { borderRadius: 0, opacity: 0.9 },
-        emphasis: { focus: 'self', itemStyle: { opacity: 1, shadowBlur: 10, shadowColor: 'rgba(0,0,0,0.45)' } },
-        blur: { itemStyle: { opacity: 0.25 } }
-      };
-
-      function valuesFor(catIdx){ return rows.map(r => r[1 + catIdx]); }
-
-      // Build series bottom→top in the exact legend order
-      const series = categories.map((cat, catIdx) => {
-        const vals = valuesFor(catIdx);
-        return {
-          ...baseBar,
-          name: cat,
-          // keep colors identical to earlier weeks
-          itemStyle: { ...baseBar.itemStyle, color: colors[cat] },
-          data: vals.map((v, cityIdx) => {
-            const isTop = (topIndexByCity[cityIdx] === catIdx);
-            // only the true top segment gets the rounded top (same look as Week 2/3/4)
-            return isTop ? { value: v, itemStyle: { borderRadius: [6,6,0,0] } } : v;
-          })
-        };
-      });
-
-      // Centered total pill above the full stack (same style)
-      series.push({
-        name: 'TotalLabels',
-        type: 'custom',
-        silent: true,
-        renderItem: (params, api) => {
-          const i = params.dataIndex;
-          const total = totals[i];
-          const pt = api.coord([cities[i], total]);
-          return {
-            type: 'text',
-            x: pt[0], y: pt[1] - 10,
-            style: {
-              text: String(total),
-              textAlign: 'center',
-              textVerticalAlign: 'bottom',
-              fill: '#fff',
-              fontFamily: 'DM Sans', fontSize: 12,
-              backgroundColor: 'rgba(0,0,0,0.55)',
-              padding: [2,6], borderRadius: 8
-            },
-            z: 20
-          };
-        },
-        data: totals.map((t,i)=>({ value:[cities[i], t] }))
-      });
-
-      const chart = echarts.init(document.getElementById('chart'), null, { renderer: 'svg' }); // same renderer we’ve been using
-
-      chart.setOption({
-        backgroundColor:'#191919',
-        title: {
-          text: 'Week 5',
-          subtext: 'Sep 16 – Sep 23, 2025',
-          left: 'center', top: 6,
-          textStyle:   { color:'#fff', fontFamily:'DM Sans', fontWeight:700, fontSize:20 },
-          subtextStyle:{ color:'#cfcfcf', fontFamily:'DM Sans', fontWeight:600, fontSize:12, padding:[8,0,0,0] }
-        },
-        legend: {
-          data: categories,
-          top: 66,
-          textStyle: { color:'#dddddd', fontFamily:'DM Sans', fontSize:12 },
-          itemWidth:14, itemHeight:8
-        },
-        grid: { left:'8%', right:'6%', top: 98, bottom: 48 },
-        xAxis: {
-          type:'category', data:cities,
-          axisLabel:{ color:'#dddddd', fontFamily:'DM Sans' },
-          axisLine:{ lineStyle:{ color:'#2a2a2a' } }, axisTick:{ show:false }
-        },
-        yAxis: {
-          type:'value', name:'Beds',
-          nameTextStyle:{ color:'#ffffff', fontFamily:'DM Sans', fontSize:12 },
-          axisLabel:{ color:'#cccccc', fontFamily:'DM Sans' },
-          splitLine:{ lineStyle:{ color:'#2a2a2a' } },
-          axisLine:{ show:false }, axisTick:{ show:false },
-          min: 0,
-          max: 1100   // small headroom above 994 like before
-        },
-        tooltip: {
-          trigger:'item', axisPointer:{ type:'none' },
-          backgroundColor:'#1f1f1f', borderColor:'#2c2c2c', borderWidth:1,
-          textStyle:{ color:'#fff', fontFamily:'DM Sans' },
-          formatter: p => `${p.name} — ${p.seriesName}<br/><b>${p.value}</b>`
-        },
-        animationDuration: 800, animationEasing: 'quartOut',
-        series
-      });
-
-      window.addEventListener('resize', () => chart.resize());
+    // which segment is the top non-zero per city (for rounded top)
+    const topIndexByCity = rows.map(r => {
+      const vals = r.slice(1);
+      for (let i = vals.length - 1; i >= 0; i--) if (vals[i] > 0) return i;
+      return -1;
     });
+
+    const baseBar = {
+      type: 'bar',
+      stack: 'total',
+      barWidth: 22,
+      itemStyle: { borderRadius: 0, opacity: 0.9 },
+      emphasis: { focus: 'self', itemStyle: { opacity: 1, shadowBlur: 10, shadowColor: 'rgba(0,0,0,0.45)' } },
+      blur: { itemStyle: { opacity: 0.25 } }
+    };
+
+    function valuesFor(catIdx){ return rows.map(r => r[1 + catIdx]); }
+
+    const series = categories.map((cat, catIdx) => {
+      const vals = valuesFor(catIdx);
+      return {
+        ...baseBar,
+        name: cat,
+        itemStyle: { ...baseBar.itemStyle, color: colorMap[cat] },
+        data: vals.map((v, cityIdx) => {
+          const isTop = (topIndexByCity[cityIdx] === catIdx);
+          return isTop ? { value: v, itemStyle: { borderRadius: [6,6,0,0] } } : v;
+        })
+      };
+    });
+
+    // ✅ FIX: totals label anchored to the FULL stack height (not the North bar)
+    series.push({
+      name: 'TotalLabels',
+      type: 'custom',
+      silent: true,
+      renderItem: (params, api) => {
+        const i = params.dataIndex;
+        const total = totals[i];
+        const pt = api.coord([cities[i], total]);
+        return {
+          type: 'text',
+          x: pt[0],
+          y: pt[1] - 10,                         // a touch more clearance above the stack
+          style: {
+            text: String(total),
+            textAlign: 'center',
+            textVerticalAlign: 'bottom',
+            fill: '#fff',
+            fontFamily: 'DM Sans', fontSize: 12,
+            backgroundColor: 'rgba(0,0,0,0.55)',
+            padding: [2,6],
+            borderRadius: 8
+          },
+          z: 20
+        };
+      },
+      data: totals.map((t,i)=>({ value:[cities[i], t] }))
+    });
+
+    const chart = echarts.init(document.getElementById('chart'));
+
+    const option = {
+      backgroundColor:'#191919',
+      title: {
+        text: 'Week 5',
+        subtext: 'Sep 16 – Sep 23, 2025',
+        left: 'center', top: 6,
+        textStyle:   { color:'#fff', fontFamily:'DM Sans', fontWeight:700, fontSize:20 },
+        subtextStyle:{ color:'#cfcfcf', fontFamily:'DM Sans', fontWeight:600, fontSize:12, padding:[8,0,0,0] }
+      },
+      legend: {
+        data: categories,
+        top: 66,
+        textStyle: { color:'#dddddd', fontFamily:'DM Sans', fontSize:12 },
+        itemWidth:14, itemHeight:8
+      },
+      grid: { left:'8%', right:'6%', top: 98, bottom: 48 },
+      xAxis: {
+        type:'category', data:cities,
+        axisLabel:{ color:'#dddddd', fontFamily:'DM Sans' },
+        axisLine:{ lineStyle:{ color:'#2a2a2a' } }, axisTick:{ show:false }
+      },
+      yAxis: {
+        type:'value', name:'Requests',
+        nameTextStyle:{ color:'#ffffff', fontFamily:'DM Sans', fontSize:12 },
+        axisLabel:{ color:'#cccccc', fontFamily:'DM Sans' },
+        splitLine:{ lineStyle:{ color:'#2a2a2a' } },
+        axisLine:{ show:false }, axisTick:{ show:false },
+        min: 0,
+        // a little headroom so the pill never touches the top grid line
+        max: Math.max(...totals) + 2
+      },
+      tooltip: {
+        trigger:'item', axisPointer:{ type:'none' },
+        backgroundColor:'#1f1f1f', borderColor:'#2c2c2c', borderWidth:1,
+        textStyle:{ color:'#fff', fontFamily:'DM Sans' },
+        formatter: p => `${p.name} — ${p.seriesName}<br/><b>${p.value}</b>`
+      },
+      animationDuration: 800, animationEasing: 'quartOut',
+      series
+    };
+
+    chart.setOption(option);
+    window.addEventListener('resize', () => chart.resize());
   </script>
 </body>
 </html>
