--- a/week1_pie.html
+++ b/week1_pie.html
@@ -130,7 +130,7 @@
         axisLine:{ lineStyle:{ color:'#2a2a2a' } }, axisTick:{ show:false }
       },
       yAxis: {
-        type:'value', name:'Requests',
+        type:'value', name:'Beds',
         nameTextStyle:{ color:'#ffffff', fontFamily:'DM Sans', fontSize:12 },
         axisLabel:{ color:'#cccccc', fontFamily:'DM Sans' },
         splitLine:{ lineStyle:{ color:'#2a2a2a' } },
@@ -151,4 +151,5 @@
   </script>
 </body>
 </html>
+
 
